<resources>

    <string name="app_Name">MiCaja+</string>
    <string name="calendario_Txt">DD/MM/AAAA</string>
    <string name="buscar">Buscar...</string>
    <string name="categoria">Categoría a Agregar</string>
    <string name="cedula">Cédula</string>
    <string name="click_Registro">REGISTRARSE</string>
    <string name="consultar_Operaciones">CONSULTAR ESTADO DE LA TIENDA</string>
    <string name="consultarXFecha">Establece un período de tiempo</string>
    <string name="Documento">N.º Documento</string>
    <string name="fecha">Fecha</string>
    <string name="graf_Creditos">Gráfica de créditos</string>
    <string name="graf_Costos">Gráfica de costos</string>
    <string name="graf_Gastos">Gráfica de gastos</string>
    <string name="graf_Ventas">Gráfica de Ventas</string>
    <string name="hint_costos">Costos $</string>
    <string name="hint_gastos">Gastos $</string>
    <string name="hint_ventas">Ventas $</string>
    <string name="hint_fiados">Total de clientes que te deben:</string>
    <string name="ic_Candado">Número de teléfono</string>
    <string name="ic_Cedula">Documento de identidad</string>
    <string name="ic_Retroceder">Ícono de retroceso</string>
    <string name="logo_App">Logo de MiCaja+</string>
    <string name="loguearse">INICIAR SESIÓN</string>
    <string name="mi_Caja">MICAJA</string>
    <string name="plus">+</string>
    <string name="pregunta">¿Aún no tienes cuenta?</string>
    <string name="producto">"Producto a Agregar "</string>
    <string name="rango_fecha"> oct 31 2025 - nov 31 2025  </string>
    <string name="registrarse">REGISTRARME</string>
    <string name="telefono">N.º de teléfono</string>
    <string name="titulo_Agregar">Agregar Producto</string>
    <string name="txt_Reporte">REPORTES</string>
    <string name="txt_Venta_itm">Ventas</string>
    <string name="app_name">MiCaja+</string>
    <string name="txtTienda">Chat</string>

    <string name="tituloCredito">Créditos</string>
    <string name="txtCredito">Lista de Créditos</string>
    <string name="txtBalance">Consultar Balance</string>
    <string name="nombreCompleto">Nombre</string>
    <string name="valor">Valor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ganancias">Ganancias:</string>
    <string name="gastos">Gastos:</string>
    <string name="ventas">Ventas:</string>
    <string name="costos">Costos:</string>
    <string name="NombreTendero">Nombre</string>
    <string name="ResumenDia">Resumen Del Día</string>
    <string name="abono">Abono</string>
    <string name="Editar_Inventario">Editar Producto</string>
    <string name="NombreProducto">Nombre del Producto</string>
    <string name="Presentación">Presentación</string>
    <string name="Proveedor">Proveedor</string>
    <string name="precioVenta">Precio Venta ($)</string>
    <string name="Cantidad">Cantidad</string>
    <string name="titulo_EditarCliente">Editar Cliente</string>
    <string name="subtitulo_EditarCliente">Busca y modifica los datos del cliente</string>
    <string name="hint_BuscarCliente">Buscar Cedula</string>
    <string name="label_Paso1">① Seleccionar cliente</string>
    <string name="cd_btnBuscar">boton buscar cliente</string>
    <string name="label_Paso2">② Editar datos</string>
    <string name="hint_NombreCliente">Nombre del Cliente</string>
    <string name="hint_CedulaCliente">Cedula del Cliente</string>
    <string name="hint_TelefonoCliente">Telefono del Cliente</string>
    <string name="hint_ValorCredito">Valor del Credito</string>
    <string name="btn_ActualizarDatos">Actualizar Datos</string>
    <string name="EjArroz">Ej. Arroz</string>
    <string name="presentacion">Presentacion (tamaño,sabor)</string>
    <string name="EjCocacola">Ej. Cocacola</string>
    <string name="valor_0">$ 0</string>
    <string name="Ej12">Ej. 12</string>
    <string name="GUARDARPRODUCTO">Editar Producto</string>
    <string name="hint_BuscarProducto">Buscar por nombre...</string>
    <string name="cd_AgregarProducto">btn Agregar producto</string>
    <string name="titulo_Inventario">Mis Productos</string>
    <string name="NombredelProducto">Nombre de Producto</string>
    <string name="Descripcion">Descripción</string>
    <string name="Precio">Precio</string>
    <string name="Cantidad15unidades">Cantidad :</string>
    <string name="valor_cero">$ 0</string>
    <string name="editarCliente">Editar Cliente</string>
    <string name="editarProducto">Editar Producto</string>
    <string name="subtitulo_EditarProducto">Busca y modifica los datos de producto</string>

    <string name="label_Paso1_Producto">① Buscar producto</string>
    <string name="label_Paso2_Producto">② Editar datos</string>
    <string name="cd_btnBuscarProducto">buscar_producto</string>
    <string name="hint_BuscarPresentacion">Buscar por precentacion...</string>
    <string name="precioCompra">Precio Compra ($)</string>
    <string name="CategoriaProducto">Categoria</string>
    <string name="label_Paso1_Producto_Añadir">Datos del Producto</string>
    <string name="hint_AñadirProductoNombre">Nombre del Producto</string>
    <string name="Añadir_Inventario">Agregar Producto</string>
    <string name="subtitulo_Agregar_Producto">Agrega un nuevo producto al inventario</string>
    <string name="GUARDARPRODUCTONUEVO">Guardar Producto</string>


    <string name="identificacion">Número de identificación</string>
    <string name="vivas">Andrés Felipe Vivas Erazo</string>
    <string name="sin_coincidencias">No se ha encontrado el Producto</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="cancelar">Cancelar</string>
    <string name="busqueda">BUSQUEDA</string>
    <string name="menu">MENÚ</string>
    <string name="buendia">BUEN DÍA</string>
    <string name="enviar">Enviar.</string>
    <string name="microfono">Micrófono</string>
    <string name="mensajillo">Escribe un mensaje...</string>
    <string name="user">Mensaje del usuario.</string>
    <string name="respuesta">Respuesta del sistema.</string>
    <string name="ir_chat">IR A CHAT</string>
    <string name="ejemplos">Ejemplos</string>
    <string name="nombre_ejemplos">Nombre del Ejemplo</string>
    <string name="ej_venta">Ej: Venta $ 50000</string>
    <string name="variantes">Toca un ejemplo para ver sus variantes</string>
    <string name="seleccione">Seleccionar →</string>
    <string name="puedes">Puedes decir cualquiera de estas palabras: →</string>
    <string name="ejemplos_de_uso">Ejemplo de uso:</string>
    <string name="comandos">Comandos</string>
    <string name="comousar">Como usar el chat</string>
    <string name="vercomandos">Ver comandos</string>
    <string name="gestion">Gestión</string>
    <string name="cerrarsesion">Cerrar sesión</string>
    <string name="utilidad">¿Te gustaria ver la utilidad?</string>

</resources>

